restless/assets/css/custom.css
.logo {
    margin: 20px;
    margin-top: 35px;
    max-width: 400px;
}

body {
 background-image: url("../img/background-869578.png");
 background-color: #cccccc;
}


.intro-text {
    max-height: 400px;
    max-width: 800px;
    margin-top: 80px;
    font-size: 1.3em;
}

.features-title {
    margin-top: -20px;
}

# Accordion
.accordion {
  color: #444;
  padding: 18px;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  transition: 0.4s;
  overflow: auto;
}

.active, .accordion:hover {
  background-color: #ccc;
}

.panel {
  background-color: none;
  max-height: 0;
  transition: max-height 0.2s ease-out;
  font-size: .80em;
  overflow: hidden;
}

.list-body {
    z-index: 1000;
    position: relative;
    font-size: .95em;
    overflow: auto;
/*    max-height: 300px;*/
}

.footer-text {
    position: fixed;
    color: white;
    z-index: 100;
    bottom: 0 !important;
    right: 0 !important;
    margin: 5px;
}

a, a:visited {
    color: inherit;
}

a:hover {
    color: grey;
}

.scrollable {
    overflow: auto;
}


.no-decorate::before {
    background-color: transparent;
}

.no-decorate::after {
    background-color: transparent;
}

.pushed-down {
    margin-top: 200px;
}

.li-done:after {
    content:'\20\20\20\✓';
}

.li-done {
    list-style-type: disc;
}

li {
   list-style-type: circle;
}


.header--cta {
    margin-top: 5px;
}

.download-now-button {
	float: right;
	z-index: 100;
	z-index: 1000;
	right: 0;
	top: 100px;
	position: absolute;
}

.slider-container {
	position: relative !important;
	margin-top: 200px;
	max-width: 800px;
	z-index: -100;
	opacity: 1;
}

.title {
	position: absolute;
	z-index: 100;
}

.intro-text {
	max-height: 100%;
	max-width: 100%;
}

.mask1 {
  -webkit-mask-image: linear-gradient(to bottom, transparent 35%, black 45%);
  mask-image: linear-gradient(to bottom, transparent 35%, black 45%);
}

